Other small fixes. Began work on dark mode that was much more difficult than expected.

--- a/css/responsive_styles.css
+++ b/css/responsive_styles.css
@@ -14,7 +14,7 @@
     /* Mobile styles */
     .navbar {
         justify-content: center; /* Center links on mobile */
-        margin-bottom: 6vw;
+
     }
     .column-1-3 {
         display: none;
